// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Component should handle no tabs: no tabs 1`] = `
<Grid
  className="curiosity-tabs-container"
>
  <GridItem
    span={12}
  >
    <Tabs
      activeKey={0}
      className="curiosity-tabs__no-scroll "
      component="div"
      hasBorderBottom={true}
      inset={
        {
          "default": "insetNone",
          "md": "insetLg",
        }
      }
      isBox={false}
      isFilled={false}
      isSecondary={false}
      isVertical={false}
      leftScrollAriaLabel="Scroll left"
      mountOnEnter={true}
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaSafe={true}
      rightScrollAriaLabel="Scroll right"
      unmountOnExit={true}
      variant="default"
    />
  </GridItem>
</Grid>
`;

exports[`Tabs Component should render a basic component: basic 1`] = `
<Grid
  className="curiosity-tabs-container"
>
  <GridItem
    span={12}
  >
    <Tabs
      activeKey={0}
      className="curiosity-tabs__no-scroll "
      component="div"
      hasBorderBottom={true}
      inset={
        {
          "default": "insetNone",
          "md": "insetLg",
        }
      }
      isBox={false}
      isFilled={false}
      isSecondary={false}
      isVertical={false}
      leftScrollAriaLabel="Scroll left"
      mountOnEnter={true}
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaSafe={true}
      rightScrollAriaLabel="Scroll right"
      unmountOnExit={true}
      variant="default"
    >
      <Tab
        eventKey={0}
        key="lorem"
        title={
          <TabTitleText>
            lorem
          </TabTitleText>
        }
      >
        ipsum
      </Tab>
      <Tab
        eventKey={1}
        key="dolor"
        title={
          <TabTitleText>
            dolor
          </TabTitleText>
        }
      >
        sit
      </Tab>
    </Tabs>
  </GridItem>
</Grid>
`;
